[metadata]
name = dymoprint
description = Linux Software to print with LabelManager PnP from Dymo
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/computerlyrik/dymoprint
author = Sebastian J. Bronner
author_email = waschtl@sbronner.com
maintainer= Ben Mares
maintainer_email = services-dymoprint@tensorial.com
license = Apache License 2.0
license_file = LICENSE
classifiers =
    Operating System :: POSIX :: Linux
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Printing
project_urls =
    Source = https://github.com/computerlyrik/dymoprint
    Tracker = https://github.com/computerlyrik/dymoprint/issues

[options]
package_dir =
    = src
    dymoprint_fonts = data/fonts
packages =
    dymoprint
    dymoprint_fonts
include_package_data = True
install_requires =
    importlib-metadata; python_version<"3.8"
    appdirs
    Pillow>=8.1.2,<11
    PyQRCode>=1.2.1,<2
    python-barcode>=0.13.1,<1
    pyusb
    PyQt6
    PyQt6-tools
python_requires = >=3.7,<4
setup_requires =
    setuptools_scm

[options.package_data]
dymoprint_fonts = *

[bdist_wheel]
universal = 1

[options.entry_points]
console_scripts =
    dymoprint = dymoprint.command_line:main
    dymoprint_gui = dymoprint.gui:main
